Unified: Stop showing slider on multi display.

This CL stops showing slider bubble when main bubble is shown on any
display.

TEST=manual
BUG=852866

Change-Id: I18e80b9ba480e88dd08bb10fe1b92adbeace7582
Reviewed-on: https://chromium-review.googlesource.com/1141556
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576373}
Former-commit-id: 2e817b82b8c96c045f20409f2723a9d0f4a80345